# rwa-credit-sentinel

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: package.json  tsconfig.json
apps/api/src/: app.ts  server.ts
apps/api/src/services/: credentialRegistry.ts  hash.ts  riskEngine.ts
apps/api/test/: app.test.ts  credentialRegistry.test.ts  riskEngine.test.ts
apps/web/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
contracts/risk-registry/: Cargo.toml  DEPLOYMENTS.md  README.md
contracts/risk-registry/.cargo/: config.toml
contracts/risk-registry/src/: lib.rs
contracts/risk-registry/wasm/: RiskRegistry.wasm
docs/: ACCEPTANCE.md  BUILD_LOG.md  CASPER.md  DEMO_SCRIPT.md  PUBLIC_REPO_CHECKLIST.md  STRATEGY.md  SUBMISSION.md  TODO.md  VERIFICATION.md
scripts/: verify.mjs
