[package]
name = "rwa-risk-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
casper-contract = { version = "5.1.1", default-features = false }
casper-types = "6.1.0"
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
